force-app/main/default/objects/RE_Malaysian_Formula_Table__mdt/RE_Malaysian_Formula_Table__mdt.object-meta.xml
<CustomObject>
    <label>RE_MY_Malaysian Formula Table</label>
    <pluralLabel>RE_MY_Malaysian Formula Table</pluralLabel>
</CustomObject>