force-app/main/default/objects/RE_Malaysian_Formula_Table__mdt/fields/RE_MY_Bio_Quote_1__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_Bio_Quote_1__c</fullName>
    <label>Bio Quote 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RBDPO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>