force-app/main/default/objects/RE_Malaysian_Formula_Table__mdt/fields/RE_MY_Bio_Quote_2__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_Bio_Quote_2__c</fullName>
    <label>Bio Quote 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POME (PM)</fullName>
            </value>
            <value>
                <fullName>POME (SBH)</fullName>
            </value>
            <value>
                <fullName>POME (SWK)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>