force-app/main/default/objects/RE_Malaysian_Formula_Table__mdt/fields/RE_MY_Bio_Quote_3__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_Bio_Quote_3__c</fullName>
    <label>Bio Quote 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green Palm (SBH)</fullName>
            </value>
            <value>
                <fullName>Green Palm (SWK)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>