force-app/main/default/objects/RE_Malaysian_Formula_Table__mdt/fields/RE_MY_HCV_Quote__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_HCV_Quote__c</fullName>
    <label>HCV Quote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kero</fullName>
            </value>
            <value>
                <fullName>Gasoil 0.05% S</fullName>
            </value>
            <value>
                <fullName>Gasoil 0.001% S</fullName>
            </value>
            <value>
                <fullName>MOGAS 97</fullName>
            </value>
            <value>
                <fullName>MOGAS 95</fullName>
            </value>
            <value>
                <fullName>Gasoil 0.005% S</fullName>
            </value>
            <value>
                <fullName>Gasoil 0.25% S</fullName>
            </value>
            <value>
                <fullName>Gasoil 0.5% S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>