force-app/main/default/objects/RE_Malaysian_Formula_Table__mdt/fields/RE_MY_Market_Premium_Quote__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_Market_Premium_Quote__c</fullName>
    <label>Market Premium Quote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HIGH RON PREMIUM</fullName>
            </value>
            <value>
                <fullName>MID RON PREMIUM</fullName>
            </value>
            <value>
                <fullName>Kero Premium</fullName>
            </value>
            <value>
                <fullName>Gasoil 0.05% Premium</fullName>
            </value>
            <value>
                <fullName>Gasoil 0.001% Premium</fullName>
            </value>
            <value>
                <fullName>JET/AVTUR</fullName>
                <isActive>false</isActive>
                <label>JET/AVTUR</label>
            </value>
            <value>
                <fullName>Platts GO 0.001%</fullName>
                <isActive>false</isActive>
                <label>Platts GO 0.001%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>