force-app/main/default/objects/RE_Malaysian_Formula_Table__mdt/fields/RE_MY_MR_Cost_Percentage__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_MR_Cost_Percentage__c</fullName>
    <label>MR Cost %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>