force-app/main/default/objects/RE_Malaysian_Formula_Table__mdt/fields/RE_MY_MR_Frieght_Quote__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_MR_Frieght_Quote__c</fullName>
    <label>MR Frieght Quote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MR Floating Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>