force-app/main/default/objects/RE_Malaysian_Formula_Table__mdt/fields/RE_MY_Oil_Loss_Percentage__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_Oil_Loss_Percentage__c</fullName>
    <label>Oil Loss %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>