force-app/main/default/objects/RE_Malaysian_Formula_Table__mdt/fields/RE_MY_Plant__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_Plant__c</fullName>
    <label>Plant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tawau</fullName>
            </value>
            <value>
                <fullName>Bintulu</fullName>
            </value>
            <value>
                <fullName>IOT Senari</fullName>
            </value>
            <value>
                <fullName>Bagan Luar</fullName>
            </value>
            <value>
                <fullName>KVDT</fullName>
            </value>
            <value>
                <fullName>Port Dickson</fullName>
            </value>
            <value>
                <fullName>Pasir Gudang</fullName>
            </value>
            <value>
                <fullName>Tanjung Gelang</fullName>
            </value>
            <value>
                <fullName>Labuan</fullName>
            </value>
            <value>
                <fullName>Kota Kinabalu</fullName>
            </value>
            <value>
                <fullName>Sandakan</fullName>
            </value>
            <value>
                <fullName>Tg Manis</fullName>
            </value>
            <value>
                <fullName>Westport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>