force-app/main/default/objects/RE_Malaysian_Formula_Table__mdt/fields/RE_MY_Port_Charges__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_Port_Charges__c</fullName>
    <label>Port Charges</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>