force-app/main/default/objects/RE_Malaysian_Formula_Table__mdt/fields/RE_MY_Product__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BF ULG95</fullName>
            </value>
            <value>
                <fullName>Gasoil B0 0.001% S</fullName>
                <isActive>false</isActive>
                <label>Gasoil B0 0.001% S</label>
            </value>
            <value>
                <fullName>Gasoil B0 0.05% S</fullName>
            </value>
            <value>
                <fullName>Gasoil B7 0.001% S</fullName>
                <isActive>false</isActive>
                <label>Gasoil B7 0.001% S</label>
            </value>
            <value>
                <fullName>Gasoil B7 0.05% S</fullName>
            </value>
            <value>
                <fullName>Gasoil E2 B10</fullName>
            </value>
            <value>
                <fullName>Gasoil E5 B10</fullName>
                <isActive>false</isActive>
                <label>Gasoil E5 B10</label>
            </value>
            <value>
                <fullName>Gasoil E5 B20</fullName>
                <isActive>false</isActive>
                <label>Gasoil E5 B20</label>
            </value>
            <value>
                <fullName>IGO 10 ppm B0</fullName>
            </value>
            <value>
                <fullName>IGO 10 ppm B10</fullName>
            </value>
            <value>
                <fullName>IGO 10 ppm B20</fullName>
            </value>
            <value>
                <fullName>IGO 10 ppm B7</fullName>
            </value>
            <value>
                <fullName>Kerosene</fullName>
            </value>
            <value>
                <fullName>MOGAS 95</fullName>
                <isActive>false</isActive>
                <label>MOGAS 95</label>
            </value>
            <value>
                <fullName>MOGAS 97</fullName>
                <isActive>false</isActive>
                <label>MOGAS 97</label>
            </value>
            <value>
                <fullName>SH ULG97</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>