force-app/main/default/objects/RE_Malaysian_Formula_Table__mdt/fields/RE_MY_TP_Premium__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_TP_Premium__c</fullName>
    <label>TP Premium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>