force-app/main/default/objects/RE_Malaysian_Formula_Table__mdt/fields/RE_MY_TP_Premium_Unit__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_TP_Premium_Unit__c</fullName>
    <label>TP Premium Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>MYR/BBL</fullName>
            </value>
            <value>
                <fullName>MYR/CBM</fullName>
            </value>
            <value>
                <fullName>MYR/LTR</fullName>
            </value>
            <value>
                <fullName>MYR/TON</fullName>
            </value>
            <value>
                <fullName>MYR CTS/BBL</fullName>
            </value>
            <value>
                <fullName>MYR CTS/CBM</fullName>
            </value>
            <value>
                <fullName>MYR CTS/LTR</fullName>
            </value>
            <value>
                <fullName>MYR CTS/TON</fullName>
            </value>
            <value>
                <fullName>SGD/BBL</fullName>
            </value>
            <value>
                <fullName>SGD/CBM</fullName>
            </value>
            <value>
                <fullName>SGD/LTR</fullName>
            </value>
            <value>
                <fullName>SGD/TON</fullName>
            </value>
            <value>
                <fullName>SGD CTS/BBL</fullName>
            </value>
            <value>
                <fullName>SGD CTS/CBM</fullName>
            </value>
            <value>
                <fullName>SGD CTS/LTR</fullName>
            </value>
            <value>
                <fullName>SGD CTS/TON</fullName>
            </value>
            <value>
                <fullName>USD/BBL</fullName>
            </value>
            <value>
                <fullName>USD/CBM</fullName>
            </value>
            <value>
                <fullName>USD/LTR</fullName>
            </value>
            <value>
                <fullName>USD/TON</fullName>
            </value>
            <value>
                <fullName>USD CTS/BBL</fullName>
            </value>
            <value>
                <fullName>USD CTS/CBM</fullName>
            </value>
            <value>
                <fullName>USD CTS/LTR</fullName>
            </value>
            <value>
                <fullName>USD CTS/TON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>