force-app/main/default/objects/RE_Malaysian_Formula_Table__mdt/fields/RE_MY_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_Valid_From__c</fullName>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>